WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
313708
Cannot delete partitioned cookies with WKHTTPCookieStore::deleteCookie
https://bugs.webkit.org/show_bug.cgi?id=313708
Summary
Cannot delete partitioned cookies with WKHTTPCookieStore::deleteCookie
rupin
Reported
2026-04-29 19:26:11 PDT
Cannot delete partitioned cookies with WKHTTPCookieStore::deleteCookie
Attachments
Add attachment
proposed patch, testcase, etc.
rupin
Comment 1
2026-04-29 19:26:18 PDT
rdar://174557252
rupin
Comment 2
2026-04-29 19:52:14 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63944
EWS
Comment 3
2026-05-02 10:07:49 PDT
Committed
312478@main
(29ed7a84dc85): <
https://commits.webkit.org/312478@main
> Reviewed commits have been landed. Closing PR #63944 and removing active labels.
EWS
Comment 4
2026-05-11 10:31:55 PDT
Committed
305413.869@safari-7624-branch
(cfc0bc45b0c5): <
https://commits.webkit.org/305413.869@safari-7624-branch
> Reviewed commits have been landed. Closing PR #5158 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug