Source/WTF/wtf/cocoa/RuntimeApplicationChecksCocoa.h
@@ -141,6 +141,7 @@ enum class SDKAlignedBehavior {
     ManagedRefreshControlAppearance,
     EnableUserScriptAndUserStyleInterning,
     AllBackForwardItemsWithoutUserGestureInvisibleToUI,
+    ExposePartitionFromWKHTTPCookieStoreAPI,
 
     NumberOfBehaviors
 };
@@ -224,6 +225,7 @@ WTF_EXPORT_PRIVATE bool isMobileStore();
 WTF_EXPORT_PRIVATE bool isUNIQLOApp();
 WTF_EXPORT_PRIVATE bool isDOFUSTouch();
 WTF_EXPORT_PRIVATE bool isMyRideK12();
+WTF_EXPORT_PRIVATE bool isTableau();
 
 } // IOSApplication
 
